--- a/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
@@ -81,8 +81,7 @@
     <h3>4. Single Machine Demo</h3>
     <p>
         <strong>Single Machine Demo</strong>에서는
-        사용자가 ???을 입력하여
-        ??? 최소화하는 생산 계획을 수립하는 과정을 체험할 수 있습니다.
+        사용자가 <strong>작업 정보</strong>와 <strong>최적화 목표</strong>를 을 입력하여 생산 계획을 수립하는 과정을 체험할 수 있습니다.
     </p>
 </div>
 {% endblock %}
