--- a/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
@@ -41,34 +41,33 @@
     <div class="col-md-8 model-definition-content">
         <h4 class="model-definition-content"><strong>입력 데이터:</strong></h4>
         <ul>
-            <li> <strong>\( J \)</strong> : 작업의 집합. 각 작업은 고유한 특성 보유, 예{JobA, JobB, ... JobJ}</li>
-            <li> <strong>\( NumJ \)</strong> : 총 작업의 개수</li>
-            <li> <strong>\( N \)</strong> : 작업의 순서(위치)를 나타내는 집합, 예{1, 2, ... , NumJ}</li>
-            <li> <strong>\( p_{j} \)</strong> : 작업 \( j \) 을 기계에서 처리하는데 걸리는 시간(Processing time)</li>
+            <li><strong>\( i, k \in \{1, 2, \dots, n\} \)</strong> : 작업(Job)의 인덱스. n은 총 작업의 수</li>
+            <li><strong>\( p_{j} \)</strong> : 작업 \( i \) 을 기계에서 처리하는데 걸리는 시간(Processing time)</li>
         </ul>
         <hr>
 
         <h4 class="model-definition-content"><strong>결정 변수:</strong></h4>
         <ul>
-            <li> <strong>\( x_{jk} \)</strong> : 작업 \( j \) 가 \( k \) 번째 위치에 배정되면 1, 아니면 0(이진 변수)</li>
-            <li> <strong>\( C_{j} \)</strong> : 작업 \( j \) 가 기계에서 모든 처리를 마치고 완료되는 시점을 의미 </li>
+            <li><strong>\( x_{ik} \)</strong> : 작업 \( i \) 가 \( k \) 번째 위치에 배정되면 1, 아니면 0(이진 변수)</li>
+            <li><strong>\( C_{i} \)</strong> : 작업 \( i \)의 완료 시간 변수,
+                이 변수는 \( x_{ik} \)에 의해 순서가 결정된 후 계산될 수도 있고, 모델 내에서 직접 최적화될 수도 있습니다. (연속 변수)</li>
         </ul>
 
         <h4 class="model-definition-content"><strong> 목표 함수:</strong></h4> 총 완료 시간 최소화
          <div class="math-block">
-            $$\min \sum_{j \in J} C_j = \min \sum_{k \in N} \sum_{j \in J} p_j \cdot x_{jk} \cdot (NumJ - k + 1)$$
+            $$\min \sum_{i=1}^{n} C_i = \min \sum_{k=1}^{n} \sum_{i=1}^{n} p_i \cdot x_{ik} \cdot (n - k + 1)$$
         </div>
 
         <h4 class="model-definition-content"><strong>제약 조건</strong></h4>
         <ul>
             <li><strong>작업 위치 제약:</strong> 각 작업은 정확히 하나의 작업 위치만 배정
                 <div class="math-block">
-                    $$\sum_{k \in N} x_{jk} = 1, \quad \forall j \in J$$
+                    $$\sum_{k=1}^{n} x_{ik} = 1, \quad \forall i$$
                 </div>
             </li>
             <li><strong>단일 자원 제약 제약:</strong> 기계는 한 번에 오직 하나의 작업만 처리
                 <div class="math-block">
-                    $$\sum_{j \in J} x_{jk} = 1, \quad \forall k \in N$$
+                    $$\sum_{i=1}^{n} x_{ik} = 1, \quad \forall k$$
                 </div>
             </li>
         </ul>
